--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -40,13 +40,7 @@
   }
 }
 
-.carousel-header-slide-options-wrapper {
-  margin: 0;
-}
-
 .carousel-header-editor-controls {
-  display: flex;
-  margin: auto;
   position: absolute;
   top: 20px;
   right: 20px;
@@ -57,45 +51,34 @@
     right: auto;
   }
 
-  .carousel-header-editor-controls-menu {
-    position: relative;
-
-    ul {
-      position: absolute;
-      right: 0;
-      margin: 0;
-      padding: 0;
-
-      html[dir="rtl"] & {
-        left: 0;
-        right: auto;
-      }
-
-      li {
-        color: $grey-80;
-        background-color: $white;
-        display: flex;
-        align-items: center;
-        padding: 10px;
-        font-weight: 700;
-        white-space: nowrap;
-        font-size: 14px;
-        cursor: pointer;
-
-        .dashicon {
-          margin-inline-end: 10px;
-        }
-
-        &:hover {
-          background-color: $grey-10;
-        }
-      }
-    }
-  }
-
   .carousel-header-exit-to-start &,
   .carousel-header-exit-to-end & {
     display: none;
+  }
+}
+
+.carousel-header-editor-controls-menu {
+  margin-bottom: 0;
+
+  button {
+    width: 100%;
+    color: $grey-80;
+    background-color: $white;
+    font-weight: 700;
+    font-size: 14px;
+    border: none;
+    outline: none;
+
+    .dashicon {
+      margin-inline-end: 10px;
+    }
+
+    &:hover,
+    &:focus:not(:disabled) {
+      box-shadow: none;
+      background-color: $grey-10;
+      color: $grey-80;
+    }
   }
 }
 
