Fix fonts location and add missing fonts
* Not all of the fonts in the plugin were included here.
* It used the folder of the plugin, which is different, so all URLs in
templates/head/google_fonts.twig were a 404.

--- a/templates/head/google_fonts.twig
+++ b/templates/head/google_fonts.twig
@@ -4,18 +4,18 @@
 	<style>
 		@font-face {
 			font-family: Sanctuary;
-			src: url("{{ theme_uri }}/public/fonts/SanctuaryLC-Regular.otf");
+			src: url("{{ theme_uri }}/fonts/SanctuaryLC-Regular.otf");
 			font-display: swap;
 		}
 
 		@font-face {
 			font-family: "Save the Arctic";
-			src: url("{{ theme_uri }}/public/fonts/save-the-arctic.otf");
+			src: url("{{ theme_uri }}/fonts/save-the-arctic.otf");
 		}
 
 		@font-face {
 			font-family: Jost;
-			src: url("{{ theme_uri }}/public/fonts/Jost-Book.woff") format("woff");
+			src: url("{{ theme_uri }}/fonts/Jost-Book.woff") format("woff");
 			font-weight: normal;
 			font-style: normal;
 			font-display: swap;
@@ -23,7 +23,7 @@
 
 		@font-face {
 			font-family: Jost;
-			src: url("{{ theme_uri }}/public/fonts/Jost-BookItalic.woff") format("woff");
+			src: url("{{ theme_uri }}/fonts/Jost-BookItalic.woff") format("woff");
 			font-weight: normal;
 			font-style: italic;
 			font-display: swap;
@@ -31,7 +31,7 @@
 
 		@font-face {
 			font-family: Jost;
-			src: url("{{ theme_uri }}/public/fonts/Jost-Black.woff") format("woff");
+			src: url("{{ theme_uri }}/fonts/Jost-Black.woff") format("woff");
 			font-weight: bold;
 			font-style: normal;
 			font-display: swap;
@@ -39,7 +39,7 @@
 
 		@font-face {
 			font-family: Jost;
-			src: url("{{ theme_uri }}/public/fonts/Jost-BlackItalic.woff") format("woff");
+			src: url("{{ theme_uri }}/fonts/Jost-BlackItalic.woff") format("woff");
 			font-weight: bold;
 			font-style: italic;
 			font-display: swap;
