Add variables for pub date, remove redundant color
* The publication date is made to look the same as the Articles meta by
the existing plastic theme.
* The color is the same as the body color, we can remove the rule.

--- a/assets/src/styles/blocks/Covers/ContentCovers.scss
+++ b/assets/src/styles/blocks/Covers/ContentCovers.scss
@@ -1,6 +1,4 @@
 .content-covers-block {
-  color: $grey-80;
-
   .limit-visibility {
     margin-top: -$space-lg;
   }
@@ -94,7 +92,7 @@
           font-size: $font-size-sm;
         }
 
-        &.publication-date {
+        &.publication-date --block-covers--publication-date-- {
           font-family: $roboto;
           font-size: $font-size-xxs;
           line-height: 1.6;
