PLANET-5608 Duplicate Covers block CSS files
This is preparation for the implementation of the new Take Action covers designs

--- a/assets/src/styles/blocks/Covers/CoversStyle.scss
+++ b/assets/src/styles/blocks/Covers/CoversStyle.scss
@@ -1,1 +1,13 @@
-// Empty for now.
+@import "../../master-theme/assets/src/scss/base/variables";
+@import "../../master-theme/assets/src/scss/base/colors";
+@import "../../master-theme/assets/src/scss/base/mixins";
+@import "../../master-theme/assets/src/scss/base/fonts";
+
+// P4 Blocks
+@import "layouts/TakeActionCovers";
+@import "layouts/CampaignCovers";
+@import "layouts/ContentCovers";
+
+// A/B test for Take Action Boxout
+@import "boxout/TakeActionBoxoutScroll";
+@import "boxout/TakeActionBoxoutBottom";
