--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -37,6 +37,7 @@ Text Domain: planet4-master-theme
 @import "layout/breadcrumbs";
 @import "layout/blocks";
 @import "layout/cookies";
+@import "layout/cookies-new";
 @import "layout/footer";
 @import "layout/forms";
 @import "layout/navbar";
