Hide caption of exiting slide
* The CSS of the old version, that kept the elements in place as the
image slides out of view, was not working as intended anymore. The
caption slid along with the image, which looked weird. This is probably
a result of the block now using actual `img` tags instead of a
background image.
* As a quick fix, hide the entire caption of a slide that is exiting.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -221,6 +221,10 @@ $medium-image-height: 600px;
     }
 
     &.exit-to-start {
+      .carousel-caption {
+        display: none;
+      }
+
       .carousel-item-mask {
         width: 0;
         transition: width $slide-transition-speed;
@@ -240,6 +244,10 @@ $medium-image-height: 600px;
     }
 
     &.exit-to-end {
+      .carousel-caption {
+        display: none;
+      }
+
       .carousel-item-mask {
         width: 0;
         margin-left: auto;
