Switch Carousel Header to WYSIWYG version
* Preserve the old version as an escape hatch.
* Rename back end render function to be more accurate.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -98,7 +98,7 @@
 }
 
 @include x-large-and-up {
-  .carousel-header-beta .carousel-item .carousel-caption .main-header .row {
+  .carousel-header .carousel-item .carousel-caption .main-header .row {
     padding-inline-start: 110px;
   }
 }
