--- a/assets/src/styles/blocks/OldCarouselHeader.scss
+++ b/assets/src/styles/blocks/OldCarouselHeader.scss
@@ -10,7 +10,7 @@ $slide-transition-speed: 1s;
   width: $size * (100% / $size);
 }
 
-.carousel-header {
+.carousel-header-old {
   position: relative;
   width: 100vw;
 
