--- a/assets/src/styles/campaigns/block-overrides/_campaign_carousel_header.scss
+++ b/assets/src/styles/campaigns/block-overrides/_campaign_carousel_header.scss
@@ -1,7 +1,7 @@
 body.campaign-template-default {
   .carousel-header_full-width-classic,
   .carousel-header,
-  .carousel-header-beta {
+  .carousel-header-old {
     .action-button {
       a {
         display: none;
