Remove old Carousel Header
* In the previous commit I did a quick attempt at keeping the old block
in, however it wasn't working yet. We would only keep that in as an
"escape hatch", but we tested the new block migration on develop sites
and it worked in all cases. So it's not worth the effort to keep the old
in.

--- a/assets/src/styles/campaigns/block-overrides/_campaign_carousel_header.scss
+++ b/assets/src/styles/campaigns/block-overrides/_campaign_carousel_header.scss
@@ -1,7 +1,6 @@
 body.campaign-template-default {
   .carousel-header_full-width-classic,
-  .carousel-header,
-  .carousel-header-old {
+  .carousel-header {
     .action-button {
       a {
         display: none;
