--- a/assets/src/scss/layout/_cookies-new.scss
+++ b/assets/src/scss/layout/_cookies-new.scss
@@ -1,16 +1,35 @@
+@mixin slide-from($direction, $margin) {
+  $animation-name: unique-id() !global;
+
+  @keyframes #{$animation-name} {
+    0% {
+      #{$direction}: -100%;
+    }
+
+    100% {
+      #{$direction}: $margin;
+    }
+  }
+
+  &.shown {
+    animation: 1s $animation-name;
+  }
+}
+
 .cookie-notice.new-design {
   z-index: 100;
   position: fixed;
-  bottom: 0;
   width: 100vw;
   background: white;
-  padding: 26px 24px 32px 24px;
+  padding: 24px 24px 32px;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.5s, opacity 0.5s linear;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+  bottom: 0;
+  @include slide-from(bottom, 0);
 
   &.shown {
     opacity: 1;
@@ -38,21 +57,25 @@
     right: 16px;
     left: auto;
     border-radius: 4px;
-    padding: 26px 32px 32px 32px;
+    padding: 24px 32px 32px;
     box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+    @include slide-from(right, 16px);
 
     html[dir="rtl"] & {
       right: auto;
       left: 16px;
+      @include slide-from(left, 16px);
     }
   }
 
   @include large-and-up {
     bottom: 24px;
     right: 24px;
+    @include slide-from(right, 24px);
 
     html[dir="rtl"] & {
       left: 24px;
+      @include slide-from(left, 24px);
     }
   }
 }
