--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderEditorStyle.scss
@@ -2,6 +2,14 @@
 @import "../../master-theme/assets/src/scss/base/mixins";
 @import "../../master-theme/assets/src/scss/base/variables";
 
+.carousel-sidebar-slide {
+  border-top-width: 3px;
+}
+
+.carousel-sidebar-insert-before {
+  border-top: 3px solid var(--wp-admin-theme-color, blue) !important;
+}
+
 .visually-hidden {
   display: none;
 }
