--- a/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
@@ -119,7 +119,7 @@
         padding-top: 0;
       }
 
-      .counter-block {
+      .counter-block _-- {
         margin-bottom: 0;
         margin-top: 32px;
       }
