--- a/templates/comment_form/email_field.twig
+++ b/templates/comment_form/email_field.twig
@@ -1,5 +1,14 @@
-<div class="form-group animated-label mb-0">
-	{% set your_email = __( 'Your Email', 'planet4-master-theme' ) %}
-	<input type="email" class="form-control" id="comments-email-input" name="email" placeholder="{{ your_email }}" required />
+<div class="form-group animated-label comment-email">
+	{% set placeholder = __( 'Your Email', 'planet4-master-theme' ) %}
+	{% set commenter_email = function('wp_get_current_commenter').comment_author_email ?? '' %}
+	<input
+		value="{{ commenter_email }}"
+		type="email"
+		class="form-control"
+		id="comments-email-input"
+		name="email"
+		placeholder="{{ placeholder }}"
+		required
+	/>
 	<label for="comments-email-input">{{ __( 'Email', 'planet4-master-theme' ) }}*</label>
 </div>
