--- a/templates/comments_section.twig
+++ b/templates/comments_section.twig
@@ -4,11 +4,13 @@
 		<div class="form-section">
 			{{ fn('comment_form', comments_args) }}
 		</div>
-		<section class="comments-section" itemscope itemtype="http://schema.org/UserComments">
-			<h3 class="comments-section-title">{{ __( 'Discussion', 'planet4-master-theme' ) }}</h3>
-			{% for cmt in comments %}
-				{% include "comment.twig" with {comment:cmt, index: loop.index} %}
-			{% endfor %}
-		</section>
+		{% if ( comments|length > 0 ) %}
+			<section class="comments-section" itemscope itemtype="http://schema.org/UserComments">
+				<h3 class="comments-section-title">{{ __( 'Discussion', 'planet4-master-theme' ) }}</h3>
+				{% for cmt in comments %}
+					{% include "comment.twig" with {comment:cmt, index: loop.index} %}
+				{% endfor %}
+			</section>
+		{% endif %}
 	</div>
 </div>
