--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -1,122 +1,76 @@
-.comments-block {
-  margin-top: 0;
-  padding: $n40 15px;
-  border-top: 1px solid $blue;
-  background-color: $comment-block;
-
-  @include medium-and-up {
-    padding: $n50 $n30;
-    margin-top: 0;
-  }
-
-  @include large-and-up {
-    padding: 48px;
-    max-width: 70%;
-  }
-
-  h3 {
-    font-size: $font-size-sm;
-    margin-bottom: 16px;
-
-    @include medium-and-up {
-      margin-bottom: 22px;
-    }
-
-    @include large-and-up {
-      margin-bottom: 18px;
-    }
-
-    @include x-large-and-up {
-      margin-bottom: 16px;
-    }
-
-    &.comments-section-title {
-      margin-top: 16px;
-      margin-bottom: 0;
-    }
-  }
+.comments-block h3 {
+  font-size: 16px;
+  margin-bottom: 16px;
 }
 
 // Adds nesting on comments
 @include comment-level;
 
 .single-comment {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  padding-bottom: 32px;
-  border-bottom: 1px solid $grey-20;
-  font-size: $font-size-xxs;
-  line-height: 1.5;
+  padding-bottom: 24px;
+  font-family: $roboto;
 
-  &:last-of-type {
-    border-bottom: 0;
-  }
-
-  @include medium-and-up {
-    margin-top: 22px;
-    margin-bottom: 22px;
-    padding-bottom: 24px;
+  &:not(:first-of-type) {
+    border-top: 1px solid transparentize($grey-20, 0.5);
+    padding-top: 24px;
   }
 }
 
 .single-comment-text {
-  font-size: 1.125rem;
-  font-family: $roboto;
-  font-weight: 300;
-  margin: $n20 0;
-  color: $grey-60;
+  font-size: 16px;
+  line-height: 1.5;
+  color: $grey-80;
+  margin-bottom: 8px;
 }
 
 .single-comment-meta {
-  font-size: $font-size-xxs;
-  font-weight: 500;
-  color: $grey-80;
-  text-decoration: none;
-  display: block;
+  font-size: 14px;
+  color: $grey-40;
 
-  @include medium-and-up {
-    font-weight: 400;
+  .author-info,
+  .comment-date {
+    display: inline-block;
   }
 
-  & > * {
-    display: inline-block;
-    margin-bottom: 0;
+  .author-info::after {
+    content: "\2022";
+    padding-inline-start: 8px;
+    padding-inline-end: 6px;
+  }
 
-    &:first-child:after {
-      content: "\2022";
-      padding-left: 5px;
+  .comment-reply-link {
+    display: block;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 16px;
+  }
+}
 
-      @include medium-and-up {
-        padding-left: 7px;
+@include medium-and-up {
+  .comments-block h3 {
+    margin-bottom: 24px;
+  }
+
+  .single-comment-meta {
+    .comment-reply-link {
+      float: right;
+      margin-top: 0;
+
+      html[dir="rtl"] & {
+        float: left;
       }
     }
   }
+}
 
-  .comment-date {
-    font-weight: 400;
-    font-style: italic;
-    color: $grey-60;
-
-    @include medium-and-up {
-      font-style: italic;
-      color: $grey-60;
-    }
+@include large-and-up {
+  .comments-block {
+    max-width: 696px;
   }
+}
 
-  .comment-reply-btn {
-    clear: both;
-    display: block;
-    margin-top: 10px;
-    width: 100%;
-    padding: 0 55px;
-    font-size: $font-size-xs;
-
-    @include medium-and-up {
-      clear: none;
-      display: inline-block;
-      margin-top: -12px;
-      width: auto;
-      float: right;
-    }
+@include x-large-and-up {
+  .comments-block {
+    max-width: 736px;
   }
 }
