--- a/templates/comment_form/author_field.twig
+++ b/templates/comment_form/author_field.twig
@@ -1,5 +1,14 @@
-<div class="form-group animated-label">
-	{% set your_name = __( 'Your Name', 'planet4-master-theme' ) %}
-	<input type="text" class="form-control" id="comments-name-input" name="author" placeholder="{{ your_name }}" required />
+<div class="form-group animated-label comment-author">
+	{% set placeholder = __( 'Your Name', 'planet4-master-theme' ) %}
+	{% set commenter_name = function('wp_get_current_commenter').comment_author ?? '' %}
+	<input
+		value="{{ commenter_name }}"
+		type="text"
+		class="form-control"
+		id="comments-name-input"
+		name="author"
+		placeholder="{{ placeholder }}"
+		required
+	/>
 	<label for="comments-name-input">{{ __( 'Name', 'planet4-master-theme' )  }}*</label>
 </div>
