--- a/templates/comment_form/submit_button.twig
+++ b/templates/comment_form/submit_button.twig
@@ -1,1 +1,1 @@
-<button type="submit" class="btn btn-small btn-secondary">{{ __( 'Post comment', 'planet4-master-theme' ) }}</button>
+<button type="submit" class="btn btn-small btn-primary">{{ __( 'Post comment', 'planet4-master-theme' ) }}</button>
