--- a/assets/src/scss/layout/_page-section.scss
+++ b/assets/src/scss/layout/_page-section.scss
@@ -2,6 +2,7 @@
   text-transform: none;
   color: inherit;
   font-weight: var(--headings--font-weight, bold);
+  font-family: var(--headings--font-family, $roboto);
   font-size: 2.5rem;
   margin-bottom: $space-md;
 }
