--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -32,3 +32,4 @@
 @import "components/ValidationMessage";
 @import "components/FormField";
 @import "components/HTMLSidebarHelp";
+@import "editorFonts";
