--- a/assets/src/scss/base/_icons.scss
+++ b/assets/src/scss/base/_icons.scss
@@ -11,7 +11,7 @@
 a.pdf-link {
   &::before {
     content: "";
-    background-image: url("../../images/file-pdf.svg"), url("../../public/images/file-pdf.svg");
+    background-image: url("../../images/file-pdf.svg");
     background-position: center;
     background-repeat: no-repeat;
     height: 1rem;
@@ -26,7 +26,7 @@ a.external-link {
   &::after {
     content: "";
     display: inline-block;
-    background-image: url("../../images/external-link.svg"), url("../../public/images/external-link.svg");
+    background-image: url("../../images/external-link.svg");
     height: .55rem;
     width: .55rem;
     margin-inline-start: .3rem;
@@ -41,7 +41,7 @@ a.external-link {
     &::before {
       background-image: none;
       background-color: var(--link--color, $link-color);
-      mask-image: url("../../images/file-pdf.svg"), url("../../public/images/file-pdf.svg");
+      mask-image: url("../../images/file-pdf.svg");
       mask-repeat: no-repeat;
       mask-position: center;
     }
@@ -136,7 +136,7 @@ a.external-link {
     &::after {
       background-image: none;
       background-color: var(--link--color, $link-color);
-      mask-image: url("../../images/external-link.svg"), url("../../public/images/external-link.svg");
+      mask-image: url("../../images/external-link.svg");
       mask-repeat: no-repeat;
       mask-position: center;
       mask-size: contain;
