--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,4 +1,4 @@
-<footer id="footer" class="site-footer">
+<footer id="footer" class="site-footer site-footer--{{ nav_type ?? 'default' }}">
 	<div class="container site-footer__container">
 		{% include 'footer_social_media.twig' %}
 		<ul class="site-footer__footer-links list-unstyled">
