Refactor of the minimal Footer implementation
- Fix font-size property which has not been used correctly
- Change 'minimal' navigation type to 'planet4'
- Add the 'nav_type' parameter to the Footer and then the Footer it will render the correct layout according to that parameter.
- Remove the deprecated footer_min template

--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -147,7 +147,7 @@
   --footer--copyright-- {
     color: $grey-10;
   }
-  font: $font-size-xxs;
+  font-size: $font-size-xxs;
   line-height: 1.3;
   margin-left: auto;
   margin-right: auto;
