Add RTL css to Submenu block
The sidebar style of the Submenu block should be on the left instead of the right for RTL sites. This commit also updates the margin values to 16px instead of 15px, to be consistent with our new 8px spacing system.

--- a/assets/src/styles/blocks/Submenu.scss
+++ b/assets/src/styles/blocks/Submenu.scss
@@ -9,7 +9,7 @@ div[data-render="planet4-blocks/submenu"] {
 
   h1,
   h2 {
-    padding-left: 16px;
+    padding-inline-start: 16px;
     color: $grey-60;
     font-family: $roboto;
   }
@@ -100,7 +100,12 @@ div[data-render="planet4-blocks/submenu"] {
     @include medium-and-up {
       float: right;
       max-width: 350px;
-      margin: 0 0 15px 15px;
+      margin-bottom: 16px;
+      margin-inline-start: 16px;
+
+      html[dir="rtl"] & {
+        float: left;
+      }
     }
 
     .submenu-menu {
