Add author image on single post
This commit adds an author image to posts. Changes are made in
single.twig and necessary CSS tweaks to images to have round corners.

--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -49,6 +49,11 @@
         margin: 0 8px;
       }
 
+      .author-pic {
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
       .single-post-author,
       .single-post-time,
       .comment-link {
