PLANET-6188 Add author image on single post
Ref: https://jira.greenpeace.org/browse/PLANET-6188

---

This commit adds an author image to posts. Changes are made in
single.twig and necessary CSS tweaks to images to have round corners.
For now we use a defauly fallback for Authors with no avatar set.

--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -40,6 +40,9 @@
       padding-bottom: 16px;
       line-height: 24px;
       margin-bottom: 16px;
+      display: flex;
+      gap: 8px;
+      align-items: end;
 
       a {
         color: inherit;
@@ -49,15 +52,22 @@
         margin: 0 8px;
       }
 
-      .single-post-author,
+      .author-pic {
+        border-radius: 50%;
+        object-fit: cover;
+        max-height: 50px;
+      }
+
+      .single-post-author {
+        display: block;
+        margin: 0;
+        font-weight: 500;
+      }
+
       .single-post-time,
       .comment-link {
         display: inline-block;
         margin: 0;
-      }
-
-      .single-post-author {
-        font-weight: 500;
       }
 
       .comment-link {
