Add author image on single post
This commit adds an author image to posts. Changes are made in
single.twig and necessary CSS tweaks to images to have round corners.

--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -54,6 +54,11 @@
         margin: 0 $n5;
       }
 
+      .author-pic {
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
       .comment-link {
         &:hover {
           text-decoration: none;
