Improve and refactor the current Footer version
- Add classnames depending of the nav_type.
- If the nav_type is not defined, the footer will be rendered as the default one.
- Show or hide the primary and secondary nav through the css and not through the template

--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -197,7 +197,7 @@
   }
 }
 
-.site-footer_min {
+.site-footer--minimal {
   padding: 40px 0;
   line-height: 1;
 
@@ -226,6 +226,11 @@
     .list-unstyled {
       width: 200px;
     }
+  }
+
+  .footer-links,
+  .footer-links-secondary {
+    display: none;
   }
 
   .gp-year {
