--- a/assets/src/scss/components/_share-buttons.scss
+++ b/assets/src/scss/components/_share-buttons.scss
@@ -1,35 +1,9 @@
 .share-buttons {
-  margin: 0 0 $n10 0;
-
-  @include medium-and-up {
-    margin: 0;
-    float: right;
-
-    html[dir="rtl"] & {
-      float: left;
-    }
-  }
-
-  .single-post & {
-    @include medium-and-up {
-      margin: -10px 0 0 0;
-    }
-
-    @include large-and-up {
-      margin: -20px 0 0 0;
-    }
-
-    @include x-large-and-up {
-      margin: -10px 0 0 0;
-    }
-  }
+  display: flex;
 
   .share-btn {
     border: none;
-    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
     color: $white;
-    cursor: pointer;
-    display: inline-block;
     font-size: $font-size-md;
     opacity: 0.9;
     outline: none;
@@ -38,6 +12,11 @@
     line-height: 2.7rem;
     height: 2.7rem;
     border-radius: 4px;
+    margin-bottom: 0;
+
+    &:not(:last-child) {
+      margin-inline-end: 8px;
+    }
 
     .icon {
       top: -2px;
