--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -1,12 +1,29 @@
 {% if ( post.author.name and post.author.description ) %}
 	<div class="container clearfix">
 		<footer class="author-block" itemtype="http://schema.org/Person">
+			{% if ( post.author.avatar ) %}
+				<figure class="author-block-image">
+					<img
+						itemprop="image"
+						src="{{ fn('get_avatar_url', post.author.id, {'size' : 294 }) }}"
+						alt="{{ post.author.name }}"
+					/>
+				</figure>
+			{% endif %}
 			<div class="author-block-info">
-				<h2 class="author-block-info-title">{{ __( 'about the author', 'planet4-master-theme' ) }}</h2>
+				<h2 class="author-block-info-title">{{ __( 'About the author', 'planet4-master-theme' ) }}</h2>
+				{% if ( post.author.avatar ) %}
+					<figure class="author-block-image">
+						<img
+							itemprop="image"
+							src="{{ fn('get_avatar_url', post.author.id, {'size' : 294 }) }}"
+							alt="{{ post.author.name }}"
+						/>
+					</figure>
+				{% endif %}
 				<h5 rel="author" class="author-block-info-name">
 					<a href="{{ post.author.link }}" itemprop="name">{{ post.author.name }}</a>
 				</h5>
-
 				{% set author_bio_readmore %}
 					...  &nbsp;<a href="{{ post.author.link }}">{{ __( 'Read More', 'planet4-master-theme' ) }}</a>
 				{% endset %}
@@ -25,13 +42,6 @@
 				</p>
 
 			</div>
-			<figure class="author-block-image">
-				{% if ( post.author.avatar ) %}
-					<img itemprop="image" class="author-pic"
-						 src="{{ fn('get_avatar_url', post.author.id, {'size' : 294}) }}"
-						 alt="{{ post.author.name }}">
-				{% endif %}
-			</figure>
 		</footer>
 </div>
 {% endif %}
