PLANET-4812 Convert Take Action Boxout block to WYSIWYG
This only affects the editor experience, for now the frontend is still rendered as before

--- a/assets/src/styles/blocks/Covers/layouts/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/layouts/TakeActionCovers.scss
@@ -24,10 +24,10 @@
 
   &.action-card {
     margin-bottom: $space-lg;
-  }
 
-  &.dark-card-bg {
-    color: $white;
+    .cover-card-heading {
+      color: $white;
+    }
   }
 
   &:hover {
