--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -21,6 +21,7 @@
 @import "blocks/SubmenuEditor";
 @import "blocks/HappypointEditor";
 @import "blocks/OldENForm/ENFormEditor";
+@import "blocks/OldCovers/TakeActionBoxoutEditor";
 
 @import "components/LayoutSelector";
 @import "components/EmptyMessage";
