Convert backgrounds to variables
* To allow themes to not have a skewed background.

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -286,7 +286,9 @@ $navbar-default-height: 60px;
     position: absolute;
     top: 0;
     left: 0;
-    background: $dark-blue url("../../images/dropdown-gradient.svg") no-repeat;
+    _-- {
+      background: $dark-blue url("../../images/dropdown-gradient.svg") no-repeat;
+    }
     overflow-y: auto;
     overflow-x: hidden;
     z-index: 2;
@@ -327,7 +329,9 @@ $navbar-default-height: 60px;
       top: 0;
       bottom: 0;
       width: 8px;
-      background: transparentize($grey-80, 0.9);
+      _-- {
+        background: transparentize($grey-80, 0.9);
+      }
       z-index: 0;
     }
 
@@ -350,7 +354,9 @@ $navbar-default-height: 60px;
         height: 1.75em;
         width: 50px;
         display: inline-block;
-        background: url("../../images/country-icon.svg") center center no-repeat;
+        _-- {
+          background: url("../../images/country-icon.svg") center center no-repeat;
+        }
         border-right: 1px solid transparentize($white, 0.9);
         background-size: contain;
 
@@ -399,7 +405,9 @@ $navbar-default-height: 60px;
       position: absolute;
       top: 0;
       bottom: 0;
-      background: $white;
+      _-- {
+        background: $white;
+      }
       width: 8px;
       margin-left: -50px;
       z-index: 2;
@@ -468,7 +476,9 @@ $navbar-default-height: 60px;
   width: 300px;
   padding: 11px;
   max-width: 80%;
-  background: transparentize($dark-blue, 0.2);
+  _-- {
+    background: transparentize($dark-blue, 0.2);
+  }
 
   html[dir="rtl"] & {
     right: auto;
