Allow font-weight styling for lang menu items
* A normal font weight is not visible enough in many combinations.

--- a/assets/src/scss/layout/_navbar.scss
+++ b/assets/src/scss/layout/_navbar.scss
@@ -735,6 +735,9 @@ $navbar-default-height: 60px;
   }
 
   .nav-link {
+    _-- {
+      font-weight: normal;
+    }
     display: inline;
     font-size: $font-size-xxs;
     padding: 0;
