PLANET-6070 Temporarily remove Take Action boxout from posts
This is because the new designs for Take Action Boxouts are not ready yet and the old version breaks the new post designs

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -88,9 +88,9 @@
 		<!-- Post Block Start -->
 		<div class="container">
 			<div class="post-content">
-				{% if ( post.take_action_boxout ) %}
+				{# {% if ( post.take_action_boxout ) %}
 					{{ fn('do_blocks', post.take_action_boxout )|raw }}
-				{% endif %}
+				{% endif %} #}
 				<article class="post-details clearfix">
 					{{ post.content|e('wp_kses_post')|raw }}
 				</article>
