PLANET-6070 Fix separator bullet sometimes not showing
The bullet was not added if the editor selected tags but no categories in the backend

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -24,7 +24,7 @@
 						</a>
 					{% endif %}
 
-					{% if ( page_type and post.issues_nav_data ) %}
+					{% if ( page_type and (post.issues_nav_data or post.tags) ) %}
 						<span class="tag-wrap-bullet" aria-hidden="true">&#8226;</span>
 					{% endif %}
 
