PLANET-6070 Update widths after UAT feedback
In bigger screens we want centered smaller layout

--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -3,6 +3,14 @@
   margin: 24px 0;
   z-index: 3;
 
+  @include large-and-up {
+    max-width: 776px;
+  }
+
+  @include x-large-and-up {
+    max-width: 736px;
+  }
+
   .cover-card {
     width: auto;
     position: relative;
