--- a/templates/blocks/author_profile.twig
+++ b/templates/blocks/author_profile.twig
@@ -1,6 +1,6 @@
 {% if ( post.author.name and post.author.description ) %}
 	<div class="container clearfix">
-		<footer class="author-block" itemscope itemtype="http://schema.org/Person">
+		<div class="author-block" itemscope itemtype="http://schema.org/Person">
 			{% if ( post.author.avatar ) %}
 				<figure class="author-block-image">
 					<img
@@ -26,22 +26,21 @@
 				</h5>
 
 				{% set author_bio_char_limit = 180 %}
-				{% set post_author_description = fn('get_the_author_meta', 'description', post.author.id) %}
 
 				<div itemprop="description">
 					{# If needed, we first show a truncated version of the description, with an ellipsis and a "Show more" button #}
-					{% if ( post_author_description|length > author_bio_char_limit ) %}
-						{% set post_author_description_teaser = post_author_description|slice(0, author_bio_char_limit)|join(' ') ~ '<span class="post-author-description-ellipsis">&hellip;</span>' %}
-						{% set post_author_description_remainder = post_author_description|slice(author_bio_char_limit)|join(' ') %}
+					{% if ( post.author.description|length > author_bio_char_limit ) %}
+						{% set post_author_description_teaser = post.author.description|slice(0, author_bio_char_limit)|join(' ') ~ '<span class="post-author-description-ellipsis">&hellip;</span>' %}
+						{% set post_author_description_remainder = post.author.description|slice(author_bio_char_limit)|join(' ') %}
 						{{ post_author_description_teaser|raw }}
 						<span class="post-author-description-remainder hidden">{{ post_author_description_remainder|raw }}</span>
 						<button class="post-author-description-show-more">{{ __('Show more', 'planet4-master-theme') }}</button>
 						<button class="post-author-description-show-less hidden">{{ __('Show less', 'planet4-master-theme') }}</button>
 					{% else %}
-						{{ fn('wpautop', author_bio)|e('wp_kses_post')|raw }}
+						{{ post.author.description|raw }}
 					{% endif %}
 				</div>
 			</div>
-		</footer>
+		</div>
 </div>
 {% endif %}
